--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,6 @@
 gbfp/__pycache__/
 personalareaapp/__pycache__/
 personalareaapp/migrations/__pycache__/
+Vacancy/__pycache__/
+Vacancy/migrations/__pycache__/
+db.sqlite3
