--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,15 @@
 # *.sqlite3
+**/*.pyc
 .idea
 .secret
 db.sqlite3
 /venv/*
 /env/
 /.secret
-gbfp/__pycache__/
-personalareaapp/__pycache__/
-personalareaapp/migrations/__pycache__/
-Vacancy/__pycache__/
-Vacancy/migrations/__pycache__/
+#gbfp/__pycache__/
+#personalareaapp/__pycache__/
+#personalareaapp/migrations/__pycache__/
+#Vacancy/__pycache__/
+#Vacancy/migrations/__pycache__/
 db.sqlite3
-*.pyc
+
