--- a/.gitignore
+++ b/.gitignore
@@ -7,9 +7,9 @@ db.sqlite3
 /env/
 /.secret
 #gbfp/__pycache__/
-#personalareaapp/__pycache__/
-#personalareaapp/migrations/__pycache__/
-#Vacancy/__pycache__/
-#Vacancy/migrations/__pycache__/
+#companyapp/__pycache__/
+#companyapp/migrations/__pycache__/
+#vacancyapp/__pycache__/
+#vacancyapp/migrations/__pycache__/
 db.sqlite3
 
